tests/baselines/reference/esModuleInteropPrettyErrorRelatedInformation.errors.txt
[91mâ— [0m[96mindex.ts[0m:[93m3[0m:[93m8[0m  [91mError[0m TS2345
| invoke(foo);
  [91m       â–”â–”â–”[0m
Argument of type '{ default: () => void; }' is not assignable to parameter of type '() => void'.
  Type '{ default: () => void; }' provides no match for the signature '(): void'.

Type originates at this import. A namespace-style import cannot be called or constructed, and will cause a failure at runtime. Consider using a default import or import require here instead. [96mindex.ts[0m:[93m1[0m:[93m1[0m

  | import * as foo from "./foo";
    [96mâ–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”â–”[0m

==== foo.d.ts (0 errors) ====
    declare function foo(): void;
    declare namespace foo {}
    export = foo;
==== index.ts (1 errors) ====
    import * as foo from "./foo";
    function invoke(f: () => void) { f(); }
    invoke(foo);
           ~~~
!!! error TS2345: Argument of type '{ default: () => void; }' is not assignable to parameter of type '() => void'.
!!! error TS2345:   Type '{ default: () => void; }' provides no match for the signature '(): void'.
!!! related TS7038 index.ts:1:1: Type originates at this import. A namespace-style import cannot be called or constructed, and will cause a failure at runtime. Consider using a default import or import require here instead.
    
Found 1 error in index.ts[90m:3[0m

